added sidepanel and fix, added display and post functions for cards

--- a/src/app/modules/admin/assets/components/modal/modal-create-user-add/modal-create-user-add.component.html
+++ b/src/app/modules/admin/assets/components/modal/modal-create-user-add/modal-create-user-add.component.html
@@ -3,7 +3,7 @@
 <form
     class="bg-card rounded overflow-hidden"
     [formGroup]="horizontalStepperForm"
-    (ngSubmit)="submitForm()" 
+    (ngSubmit)="submitForm()"
 >
     <mat-horizontal-stepper [linear]="true" #horizontalStepper>
         <mat-step
@@ -41,7 +41,7 @@
                         matPrefix
                         [svgIcon]="'mat_solid:person'"
                     ></mat-icon>
-                </mat-form-field>           
+                </mat-form-field>
                 <mat-form-field class="flex-auto">
                     <input
                         matInput
@@ -55,7 +55,7 @@
                         [svgIcon]="'mat_solid:info'"
                     ></mat-icon>
                     <span matPrefix>000-000/</span>
-                </mat-form-field>             
+                </mat-form-field>
                 <mat-form-field class="flex-auto">
                     <input
                         matInput
@@ -159,7 +159,7 @@
                     </span>
                     <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
-            </div>        
+            </div>
             <div class="flex justify-end">
                 <button
                     class="px-8 mr-2"
@@ -324,8 +324,8 @@
                     class="px-8"
                     mat-flat-button
                     [color]="'primary'"
-                    type="reset"
-                    (click)="submitForm()"
+                    type="button"
+                    (click)="openConfirmationDialog()"
                 >
                     Submit
                 </button>
