--- a/src/app/modules/admin/assets/cards/pc-card/details-pc-card/details-pc-card.component.html
+++ b/src/app/modules/admin/assets/cards/pc-card/details-pc-card/details-pc-card.component.html
@@ -156,28 +156,24 @@
             </div>
 
             <div class="grid grid-cols-12 gap-x-1 mt-16">
-                <!-- Columns -->
-                <div class="col-span-8 font-medium text-md text-secondary">
-                    SERVICE
+                <div class="col-span-6 font-medium text-md text-secondary">
+                    SPECIFICATION
                 </div>
                 <div class="font-medium text-md text-right text-secondary">
                     STATUS
                 </div>
-                <div class="font-medium text-md text-right text-secondary">
+                <div
+                    class="col-span-4 font-medium text-md text-right text-secondary"
+                >
                     SRL NO
                 </div>
-                <div
-                    class="col-span-2 font-medium text-md text-right text-secondary"
-                >
-                    HISTORY
-                </div>
 
-                <!-- Divider -->
                 <div class="col-span-12 my-4 border-b"></div>
 
-                <!-- Item -->
-                <div class="col-span-8">
-                    <div class="text-lg font-medium">Asset Specification</div>
+                <div class="col-span-6">
+                    <div class="text-lg font-medium">
+                        PC Asset Specification
+                    </div>
                     <div class="mt-2 text-md text-secondary">
                         TYPE {{ cardData.pcs[0].pc_type }}, BRAND
                         {{ cardData.pcs[0].brand }}, MODEL
@@ -196,132 +192,111 @@
                 <div class="self-center text-right">
                     {{ cardData.pcs[0].status }}
                 </div>
-                <div class="self-center text-right">
+                <div class="col-span-4 self-center text-right">
                     {{ cardData.pcs[0].serial_no }}
                 </div>
-                <div class="col-span-2 self-center text-right">
-                    {{ cardData.pcs[0].history }}
-                </div>
 
-                <!-- Divider -->
-                <!-- <div class="col-span-12 my-4 border-b"></div> -->
-
-                <!-- Item -->
-                <!-- <div class="col-span-8">
-                    <div class="text-lg font-medium">Development</div>
-                    <div class="mt-2 text-md text-secondary">
-                        The web and mobile development of the application using
-                        appropriate tools and registering it to major
-                        application stores.
-                    </div>
-                </div>
-                <div class="self-center text-right">$60.50</div>
-                <div class="self-center text-right">350</div>
-                <div class="col-span-2 self-center text-right">$21,175.00</div> -->
-
-                <!-- Divider -->
-                <!-- <div class="col-span-12 my-4 border-b"></div> -->
-
-                <!-- Item -->
-                <!-- <div class="col-span-8">
-                    <div class="text-lg font-medium">Testing</div>
-                    <div class="mt-2 text-md text-secondary">
-                        Extensive testing of the application using various
-                        mobile and desktop devices with different operating
-                        systems.
-                    </div>
-                </div>
-                <div class="self-center text-right">$25.00</div>
-                <div class="self-center text-right">50</div>
-                <div class="col-span-2 self-center text-right">$1,250.00</div> -->
-
-                <!-- Divider -->
                 <div class="col-span-12 my-4 border-b"></div>
 
-                <!-- Item -->
-                <div class="col-span-12">
+                <div class="col-span-6">
                     <div class="text-lg font-medium">
                         Peripherals Under Asset
-                        <div class="col-span-12">
-                            <div
-                                *ngIf="
-                                    cardData.peripherals &&
-                                    cardData.peripherals.length > 0
-                                "
-                            >
-                                <ul>
-                                    <li
-                                        class="text-secondary text-md"
-                                        *ngFor="
-                                            let peripheral of cardData.peripherals
-                                        "
-                                    >
-                                       # {{ peripheral.asset_barcode }},
-                                       PERIPHERAL TYPE {{ peripheral.peripheral_type }},
-                                        {{ peripheral.li_description }}
-                                    </li>
-                                </ul>
-                            </div>
-                            <div
-                                *ngIf="
-                                    !cardData.peripherals ||
-                                    cardData.peripherals.length === 0
-                                "
-                            >
-                                <p>No peripherals available.</p>
-                            </div>
-                        </div>
-                        <!-- <div class="self-center text-right">$26.50</div>
-                <div class="self-center text-right">260</div>
-                <div class="col-span-2 self-center text-right">$6,890.00</div> -->
-
-                        <!-- Spacer -->
-                        <!-- <div class="col-span-12 mt-16"></div> -->
-
-                        <!-- Subtotal -->
-                        <!-- <div
-                    class="col-span-10 self-center font-medium tracking-tight text-secondary"
-                >
-                    SUBTOTAL
-                </div>
-                <div class="col-span-2 text-right text-lg">$47,315.00</div> -->
-
-                        <!-- Divider -->
-                        <!-- <div class="col-span-12 my-3 border-b"></div> -->
-
-                        <!-- Tax -->
-                        <!-- <div
-                    class="col-span-10 self-center font-medium tracking-tight text-secondary"
-                >
-                    TAX
-                </div>
-                <div class="col-span-2 text-right text-lg">$2,365.75</div> -->
-
-                        <!-- Divider -->
-                        <!-- <div class="col-span-12 my-3 border-b"></div> -->
-
-                        <!-- Discount -->
-                        <!-- <div
-                    class="col-span-10 self-center font-medium tracking-tight text-secondary"
-                >
-                    DISCOUNT
-                </div>
-                <div class="col-span-2 text-right text-lg">$180.75</div> -->
-
-                        <!-- Divider -->
-                        <!-- <div class="col-span-12 my-3 border-b"></div> -->
-
-                        <!-- Total -->
-                        <!-- <div
-                    class="col-span-10 self-center text-2xl font-medium tracking-tight text-secondary"
-                >
-                    TOTAL
-                </div>
-                <div class="col-span-2 text-right text-2xl font-medium">
-                    $49,000.00
-                </div> -->
                     </div>
+                    <div class="mt-2 text-md text-secondary">
+                        <div
+                            *ngIf="
+                                cardData.peripherals &&
+                                cardData.peripherals.length > 0
+                            "
+                        >
+                            <ul>
+                                <li
+                                    *ngFor="
+                                        let peripheral of cardData.peripherals
+                                    "
+                                >
+                                    # {{ peripheral.asset_barcode }},
 
+                                    {{ peripheral.li_description }}
+                                </li>
+                            </ul>
+                        </div>
+                        <div
+                            *ngIf="
+                                !cardData.peripherals ||
+                                cardData.peripherals.length === 0
+                            "
+                        >
+                            <p>No peripherals available.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-7 self-center text-right">
+                    <ul>
+                        <li *ngFor="let peripheral of cardData.peripherals">
+                            {{ peripheral.status }}
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-span-4 mt-7 self-center text-right">
+                    <ul>
+                        <li *ngFor="let peripheral of cardData.peripherals">
+                            {{ peripheral.serial_no }}
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-span-12 my-6 border-b"></div>
+
+                <div class="col-span-6">
+                    <div class="text-lg font-medium">
+                        Owner History of PC Asset
+                    </div>
+                    <div class="mt-2 text-md text-secondary">
+                        <div
+                            *ngIf="
+                                cardData.peripherals &&
+                                cardData.peripherals.length > 0
+                            "
+                        >
+                            <ul>
+                                <li
+                                    *ngFor="
+                                        let peripheral of cardData.peripherals
+                                    "
+                                >
+                                    # {{ peripheral.asset_barcode }},
+
+                                    {{ peripheral.li_description }}
+                                </li>
+                            </ul>
+                        </div>
+                        <div
+                            *ngIf="
+                                !cardData.peripherals ||
+                                cardData.peripherals.length === 0
+                            "
+                        >
+                            <p>No peripherals available.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-7 self-center text-right">
+                    <ul>
+                        <li *ngFor="let peripheral of cardData.peripherals">
+                            {{ peripheral.status }}
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-span-4 mt-7 self-center text-right">
+                    <ul>
+                        <li *ngFor="let peripheral of cardData.peripherals">
+                            {{ peripheral.serial_no }}
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-span-12">
                     <div class="mt-16">
                         <div class="font-medium">
                             Please pay within 15 days. Thank you for your
