--- a/src/app/modules/admin/assets/cards/pc-card/pc-card.component.html
+++ b/src/app/modules/admin/assets/cards/pc-card/pc-card.component.html
@@ -1,4 +1,4 @@
-<app-side-panel-peripherals #sidePanel>
+<app-side-panel-pcs #sidePanel>
 <div class="flex flex-col flex-auto min-w-0">
     
     <!-- Header -->
@@ -277,11 +277,11 @@
         <div>
             <mat-paginator
                 [pageSizeOptions]="[10, 15, 20, 50, 100]"
-                [pageSize]="15"
+                [pageSize]="10"
                 showFirstLastButtons
                 aria-label="Select page of Assets PC"
             ></mat-paginator>
         </div>
     </div>    
 </div>
-</app-side-panel-peripherals>
+</app-side-panel-pcs>
