--- a/src/app/modules/admin/assets/components/modal/modal-create-user-add/modal-create-user-add.component.html
+++ b/src/app/modules/admin/assets/components/modal/modal-create-user-add/modal-create-user-add.component.html
@@ -45,6 +45,19 @@
                 <mat-form-field class="flex-auto">
                     <input
                         matInput
+                        [formControlName]="'position'"
+                        [placeholder]="'Position'"
+                        required
+                    />
+                    <mat-icon
+                        class="icon-size-5"
+                        matPrefix
+                        [svgIcon]="'mat_solid:face'"
+                    ></mat-icon>
+                </mat-form-field>
+                <mat-form-field class="flex-auto">
+                    <input
+                        matInput
                         [formControlName]="'employee_id'"
                         [placeholder]="'ID'"
                         required
@@ -69,6 +82,7 @@
                         [svgIcon]="'mat_solid:local_phone'"
                     ></mat-icon>
                 </mat-form-field>
+                
             </div>
             <div class="flex justify-end">
                 <button
@@ -145,16 +159,17 @@
                         [formControlName]="'date_assigned'"
                         placeholder="Date Assigned"
                         (click)="picker.open()"
+                        class="cursor-pointer"
                         required
                     />
                     <mat-icon
                         matPrefix
-                        class="icon-size-5"
+                        class="icon-size-5 cursor-pointer"
                         (click)="picker.open()"
                     >
                         calendar_today
                     </mat-icon>
-                    <span matPrefix (click)="picker.open()">
+                    <span matPrefix (click)="picker.open()" class="cursor-pointer">
                         ex. 01/30/2024 /
                     </span>
                     <mat-datepicker #picker></mat-datepicker>
@@ -332,7 +347,20 @@
             </div>
         </mat-step>
     </mat-horizontal-stepper>
-
+    <div *ngIf="errorVisible" @fadeInOut class="fixed top-5 right-5 z-50">
+        <fuse-alert [type]="'warn'">
+            <span fuseAlertTitle>Warn alert</span>
+            {{ errorMessage }}
+        </fuse-alert>
+    </div>
+    
+    <div *ngIf="successVisible" @fadeInOut class="fixed top-5 right-5 z-50">
+        <fuse-alert [type]="'success'">
+            <span fuseAlertTitle>Success alert</span>
+            {{ successMessage }}
+        </fuse-alert>
+    </div>
+    
     <!-- Final submit button for form -->
     <!-- <div class="flex justify-end mt-8">
         <button
