--- a/src/app/modules/admin/assets/components/side-panel/side-panel-pc-card/side-panel-pc-card.component.html
+++ b/src/app/modules/admin/assets/components/side-panel/side-panel-pc-card/side-panel-pc-card.component.html
@@ -30,7 +30,7 @@
 
             <div class="flex flex-row items-start mt-8">
                 <div class="text-xl font-medium">
-                    {{ cardData.asset_barcode }}
+                    {{ cardData.pcs[0].asset_barcode }} 
                 </div>
                 <!-- Always visible div without conditions -->
                 <div
@@ -47,73 +47,42 @@
                 class="flex flex-col mt-4 border-t border-b divide-y font-medium"
             >
                 <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Date Acquired</div>
+                    <div class="text-secondary">Currently Assigned To</div>
+                    <div>{{ cardData.pcs[0]?.assigned }}</div>
+                </div>
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">Created At</div>
                     <div>
-                        {{ cardData.date_acquired | date : "dd/MM/yyyy" }}
+                        {{ cardData.date_assigned | date : "dd/MM/yyyy" }}
                     </div>
                 </div>
                 <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Brand</div>
-                    <div>
-                        {{ cardData.brand }}
-                    </div>
+                    <div class="text-secondary">Modified At</div>
+                    <div>{{ cardData.date_created | date : "dd/MM/yyyy" }}</div>
                 </div>
                 <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">model</div>
-                    <div>{{ cardData.model }}</div>
-                </div>
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Peripheral Type</div>
-                    <div>{{ cardData.peripheral_type }}</div>
+                    <div class="text-secondary">Location</div>
+                    <div>{{ cardData.location }}</div>
                 </div>
                 <ng-container>
                     <div class="flex items-center justify-between py-3">
-                        <div class="text-secondary">Size</div>
-                        <div>{{ cardData.size }}</div>
-                    </div>
-                </ng-container>
-                <ng-container>
-                    <div class="flex items-center justify-between py-3">
-                        <div class="text-secondary">Color</div>
-                        <div>{{ cardData.color }}</div>
-                    </div>
-                </ng-container>
-                <ng-container>
-                    <div class="flex items-center justify-between py-3">
-                        <div class="text-secondary">Status</div>
-                        <div>{{ cardData.status }}</div>
+                        <div class="text-secondary">Department</div>
+                        <div>{{ cardData.dept_name }}</div>
                     </div>
                 </ng-container>
             </div>
-            <ng-container>
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Currently Assigned To</div>
-                    <div>{{ cardData.assigned }}</div>
-                </div>
-            </ng-container>
-            <!-- History -->
+
+            <!-- Description -->
             <div class="flex items-center justify-between mt-8">
                 <div class="text-lg font-medium">History</div>
             </div>
             <div class="flex mt-2 border-t">
                 <div class="py-3">
                     <ng-container>
-                        <div>{{ cardData.history }}</div>
+                        <div>{{ cardData.pcs[0]?.history }}</div>
                     </ng-container>
                 </div>
             </div>
-            <!-- Description -->
-            <div class="flex items-center justify-between mt-8">
-                <div class="text-lg font-medium">Description</div>
-            </div>
-            <div class="flex mt-2 border-t">
-                <div class="py-3">
-                    <ng-container>
-                        <div>{{ cardData.li_description }}</div>
-                    </ng-container>
-                </div>
-            </div>
-
             <!-- Actions -->
             <div class="grid grid-cols-2 gap-4 w-full mt-8">
                 <button
