--- a/src/app/modules/admin/assets/components/side-panel/side-panel-pcs/side-panel-pcs.component.html
+++ b/src/app/modules/admin/assets/components/side-panel/side-panel-pcs/side-panel-pcs.component.html
@@ -1,1 +1,95 @@
-<p>side-panel-pcs works!</p>
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #sidenav mode="over" position="end" [(opened)]="isSidenavOpen">
+        <div class="p-4" *ngIf="cardData">
+            <div class="flex items-center justify-end">
+                <button mat-icon-button (click)="closeSidenav()">
+                    <mat-icon [svgIcon]="'heroicons_outline:x'"></mat-icon>
+                </button>
+            </div>            
+
+            <div class="aspect-w-6 aspect-h-4 mt-8">
+                <div
+                    class="flex items-center justify-center border rounded-lg bg-gray-50 dark:bg-card"
+                >
+                    <ng-container>
+                        <mat-icon
+                            class="icon-size-14 text-hint"
+                            [svgIcon]="'feather:file-text'"
+                        ></mat-icon>
+                    </ng-container>
+                </div>
+            </div>
+
+            <div class="flex flex-row items-start mt-8">
+                <div class="text-xl font-medium">
+                    {{ cardData.pcs[0].asset_barcode }} 
+                </div>
+                <!-- Always visible div without conditions -->
+                <div
+                    class="mt-1 ml-4 px-1.5 rounded text-sm font-semibold leading-5 text-white bg-indigo-600"
+                >
+                    File
+                </div>
+            </div>
+
+            <mat-divider class="m-6"></mat-divider>
+            <!-- Information -->
+            <div class="text-lg font-medium mt-8">Information</div>
+            <div
+                class="flex flex-col mt-4 border-t border-b divide-y font-medium"
+            >
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">Currently Assigned To</div>
+                    <div>{{ cardData.pcs[0]?.assigned }}</div>
+                </div>
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">Created At</div>
+                    <div>
+                        {{ cardData.date_assigned | date : "dd/MM/yyyy" }}
+                    </div>
+                </div>
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">Modified At</div>
+                    <div>{{ cardData.date_created | date : "dd/MM/yyyy" }}</div>
+                </div>
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">Location</div>
+                    <div>{{ cardData.location }}</div>
+                </div>
+                <ng-container>
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary">Department</div>
+                        <div>{{ cardData.dept_name }}</div>
+                    </div>
+                </ng-container>
+            </div>
+
+            <!-- Description -->
+            <div class="flex items-center justify-between mt-8">
+                <div class="text-lg font-medium">History</div>
+            </div>
+            <div class="flex mt-2 border-t">
+                <div class="py-3">
+                    <ng-container>
+                        <div>{{ cardData.pcs[0]?.history }}</div>
+                    </ng-container>
+                </div>
+            </div>
+            <!-- Actions -->
+            <div class="grid grid-cols-2 gap-4 w-full mt-8">
+                <button
+                    class="flex-auto"
+                    mat-flat-button
+                    [color]="'primary'"
+                    (click)="viewDetails()"
+                >
+                    View
+                </button>
+                <button class="flex-auto" mat-stroked-button>Edit</button>
+            </div>
+        </div>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <ng-content></ng-content>
+    </mat-sidenav-content>
+</mat-sidenav-container>
