--- a/src/app/modules/admin/assets/pc/pc-details/pc-details.component.html
+++ b/src/app/modules/admin/assets/pc/pc-details/pc-details.component.html
@@ -1,4 +1,5 @@
-<app-side-panel-peripherals #sidePanel>
+
+<app-side-panel-pc-card #sidePanel>
     <div class="flex flex-col flex-auto min-w-0">
         <!-- Header -->
         <div
@@ -415,11 +416,11 @@
             <div>
                 <mat-paginator
                     [pageSizeOptions]="[10, 15, 20, 50, 100]"
-                    [pageSize]="15"
+                    [pageSize]="10"
                     showFirstLastButtons
                     aria-label="Select page of Assets PC"
                 ></mat-paginator>
             </div>
         </div>
     </div>
-</app-side-panel-peripherals>
+</app-side-panel-pc-card>
