--- a/src/app/modules/admin/assets/components/side-panel/side-panel-pcs/side-panel-pcs.component.html
+++ b/src/app/modules/admin/assets/components/side-panel/side-panel-pcs/side-panel-pcs.component.html
@@ -5,7 +5,15 @@
                 <button mat-icon-button (click)="closeSidenav()">
                     <mat-icon [svgIcon]="'heroicons_outline:x'"></mat-icon>
                 </button>
-            </div>            
+            </div>
+
+            <!-- <div class="w-64 rounded-lg overflow-hidden mx-auto">
+                <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqswQ86aHrrf6-0QMAtH-oGmeiOUntgXxWIg&s"
+                    alt="Sidenav Image"
+                    class="w-full"
+                />
+            </div> -->
 
             <div class="aspect-w-6 aspect-h-4 mt-8">
                 <div
@@ -22,7 +30,7 @@
 
             <div class="flex flex-row items-start mt-8">
                 <div class="text-xl font-medium">
-                    {{ cardData.pcs[0].asset_barcode }} 
+                    {{ cardData.asset_barcode }}
                 </div>
                 <!-- Always visible div without conditions -->
                 <div
@@ -39,42 +47,99 @@
                 class="flex flex-col mt-4 border-t border-b divide-y font-medium"
             >
                 <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Currently Assigned To</div>
-                    <div>{{ cardData.pcs[0]?.assigned }}</div>
-                </div>
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Created At</div>
+                    <div class="text-secondary">Date Acquired</div>
                     <div>
-                        {{ cardData.date_assigned | date : "dd/MM/yyyy" }}
+                        {{ cardData.date_acquired | date : "dd/MM/yyyy" }}
                     </div>
                 </div>
                 <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Modified At</div>
-                    <div>{{ cardData.date_created | date : "dd/MM/yyyy" }}</div>
+                    <div class="text-secondary">Brand</div>
+                    <div>
+                        {{ cardData.brand }}
+                    </div>
                 </div>
                 <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Location</div>
-                    <div>{{ cardData.location }}</div>
+                    <div class="text-secondary">Model</div>
+                    <div>{{ cardData.model }}</div>
                 </div>
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">PC Type</div>
+                    <div>{{ cardData.pc_type }}</div>
+                </div>
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">RAM</div>
+                    <div>{{ cardData.ram }}</div>
+                </div>
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">Storage Capacity</div>
+                    <div>{{ cardData.storage_capacity }}</div>
+                </div>
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">Storage Type</div>
+                    <div>{{ cardData.storage_type }}</div>
+                </div>
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">OS</div>
+                    <div>{{ cardData.operating_system }}</div>
+                </div>
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">Graphics</div>
+                    <div>{{ cardData.graphics }}</div>
+                </div>                
                 <ng-container>
                     <div class="flex items-center justify-between py-3">
-                        <div class="text-secondary">Department</div>
-                        <div>{{ cardData.dept_name }}</div>
+                        <div class="text-secondary">Size</div>
+                        <div>{{ cardData.size }}</div>
+                    </div>
+                </ng-container>
+                <ng-container>
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary">Color</div>
+                        <div>{{ cardData.color }}</div>
+                    </div>
+                </ng-container>
+                <ng-container>
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary">Seial Number</div>
+                        <div>{{ cardData.serial_no }}</div>
+                    </div>
+                </ng-container>
+                <ng-container>
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary">Status</div>
+                        <div>{{ cardData.status }}</div>
                     </div>
                 </ng-container>
             </div>
-
-            <!-- Description -->
+            <ng-container>
+                <div class="flex items-center justify-between py-3">
+                    <div class="text-secondary">Currently Assigned To</div>
+                    <div>{{ cardData.assigned }}</div>
+                </div>
+            </ng-container>
+            <!-- History -->
             <div class="flex items-center justify-between mt-8">
                 <div class="text-lg font-medium">History</div>
             </div>
             <div class="flex mt-2 border-t">
                 <div class="py-3">
                     <ng-container>
-                        <div>{{ cardData.pcs[0]?.history }}</div>
+                        <div>{{ cardData.history }}</div>
                     </ng-container>
                 </div>
             </div>
+            <!-- Description -->
+            <div class="flex items-center justify-between mt-8">
+                <div class="text-lg font-medium">Description</div>
+            </div>
+            <div class="flex mt-2 border-t">
+                <div class="py-3">
+                    <ng-container>
+                        <div>{{ cardData.li_description }}</div>
+                    </ng-container>
+                </div>
+            </div>
+
             <!-- Actions -->
             <div class="grid grid-cols-2 gap-4 w-full mt-8">
                 <button
