--- a/src/app/modules/admin/assets/components/side-panel/side-panel-peripherals/side-panel-peripherals.component.html
+++ b/src/app/modules/admin/assets/components/side-panel/side-panel-peripherals/side-panel-peripherals.component.html
@@ -80,6 +80,12 @@
                 </ng-container>
                 <ng-container>
                     <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary">Seial Number</div>
+                        <div>{{ cardData.serial_no }}</div>
+                    </div>
+                </ng-container>
+                <ng-container>
+                    <div class="flex items-center justify-between py-3">
                         <div class="text-secondary">Status</div>
                         <div>{{ cardData.status }}</div>
                     </div>
