--- a/src/app/modules/admin/assets/pc/pc-details/pc-details.component.html
+++ b/src/app/modules/admin/assets/pc/pc-details/pc-details.component.html
@@ -1,5 +1,4 @@
-
-<app-side-panel-pc-card #sidePanel>
+<app-side-panel-pcs #sidePanel>
     <div class="flex flex-col flex-auto min-w-0">
         <!-- Header -->
         <div
@@ -53,7 +52,7 @@
                     </h2>
                 </div>
             </div>
-            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">          
+            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
                 <mat-form-field
                     class="fuse-mat-no-subscript w-full sm:w-72 mt-4 sm:mt-0 sm:ml-4"
                 >
@@ -67,7 +66,7 @@
                         placeholder="Search Inventory Tag"
                         (keyup)="applyInventoryTagFilter($event.target.value)"
                     />
-                </mat-form-field>            
+                </mat-form-field>
             </div>
         </div>
 
@@ -99,7 +98,7 @@
                             *matCellDef="let element"
                             class="border-b border-gray-200 px-4 py-4 text-sm font-semibold inventory-tag-cell"
                         >
-                        # {{ element.asset_barcode }}
+                            # {{ element.asset_barcode }}
                         </td>
                     </ng-container>
 
@@ -379,7 +378,7 @@
                             <mat-menu #menu="matMenu">
                                 <button
                                     mat-menu-item
-                                    (click)="sidePanel.openSidenav()"
+                                    (click)="openSidePanelWithId(element.id)"
                                 >
                                     <mat-icon
                                         class="icon-size-4 mr-4"
@@ -423,4 +422,4 @@
             </div>
         </div>
     </div>
-</app-side-panel-pc-card>
+</app-side-panel-pcs>
