polishing for views and files

--- a/src/app/modules/admin/assets/cards/pc-card/details-pc-card/details-pc-card.component.html
+++ b/src/app/modules/admin/assets/cards/pc-card/details-pc-card/details-pc-card.component.html
@@ -271,7 +271,7 @@
 
                 <div class="col-span-12 my-6 border-b"></div>
 
-                <div class="col-span-12">
+                <!-- <div class="col-span-12">
                     <div class="mt-16">
                         <div class="font-medium">
                             Please pay within 15 days. Thank you for your
@@ -295,7 +295,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
