--- a/src/app/modules/admin/assets/cards/pc-card/pc-card.component.html
+++ b/src/app/modules/admin/assets/cards/pc-card/pc-card.component.html
@@ -1,4 +1,4 @@
-<app-side-panel-pcs #sidePanel>
+<app-side-panel-pc-card #sidePanel>
 <div class="flex flex-col flex-auto min-w-0">
     
     <!-- Header -->
@@ -284,4 +284,4 @@
         </div>
     </div>    
 </div>
-</app-side-panel-pcs>
+</app-side-panel-pc-card>
