--- a/src/app/modules/admin/assets/pc/pc-details/pc-details.component.html
+++ b/src/app/modules/admin/assets/pc/pc-details/pc-details.component.html
@@ -174,7 +174,7 @@
                         </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="processor">
+                    <!-- <ng-container matColumnDef="processor">
                         <th
                             mat-header-cell
                             *matHeaderCellDef
@@ -316,7 +316,7 @@
                         >
                             {{ element.color }}
                         </td>
-                    </ng-container>
+                    </ng-container> -->
 
                     <ng-container matColumnDef="li_description">
                         <th
