--- a/src/app/modules/admin/assets/components/side-panel/side-panel-pcs/side-panel-pcs.component.html
+++ b/src/app/modules/admin/assets/components/side-panel/side-panel-pcs/side-panel-pcs.component.html
@@ -43,74 +43,72 @@
             <mat-divider class="m-6"></mat-divider>
             <!-- Information -->
             <div class="text-lg font-medium mt-8">Information</div>
-            <div
-                class="flex flex-col mt-4 border-t border-b divide-y font-medium"
-            >
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Date Acquired</div>
-                    <div>
-                        {{ cardData.date_acquired | date : "dd/MM/yyyy" }}
-                    </div>
-                </div>
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Brand</div>
-                    <div>
-                        {{ cardData.brand }}
-                    </div>
-                </div>
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Model</div>
-                    <div>{{ cardData.model }}</div>
-                </div>
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">PC Type</div>
-                    <div>{{ cardData.pc_type }}</div>
-                </div>
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">RAM</div>
-                    <div>{{ cardData.ram }}</div>
-                </div>
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Storage Capacity</div>
-                    <div>{{ cardData.storage_capacity }}</div>
-                </div>
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Storage Type</div>
-                    <div>{{ cardData.storage_type }}</div>
-                </div>
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">OS</div>
-                    <div>{{ cardData.operating_system }}</div>
-                </div>
-                <div class="flex items-center justify-between py-3">
-                    <div class="text-secondary">Graphics</div>
-                    <div>{{ cardData.graphics }}</div>
-                </div>                
-                <ng-container>
+            <div class="max-h-96 overflow-y-scroll">
+                <div class="flex flex-col mt-4 border-t border-b divide-y font-medium">
                     <div class="flex items-center justify-between py-3">
-                        <div class="text-secondary">Size</div>
-                        <div>{{ cardData.size }}</div>
+                        <div class="text-secondary">Date Acquired</div>
+                        <div>{{ cardData.date_acquired | date : "dd/MM/yyyy" }}</div>
                     </div>
-                </ng-container>
-                <ng-container>
                     <div class="flex items-center justify-between py-3">
-                        <div class="text-secondary">Color</div>
-                        <div>{{ cardData.color }}</div>
+                        <div class="text-secondary">Brand</div>
+                        <div>{{ cardData.brand }}</div>
                     </div>
-                </ng-container>
-                <ng-container>
                     <div class="flex items-center justify-between py-3">
-                        <div class="text-secondary">Seial Number</div>
-                        <div>{{ cardData.serial_no }}</div>
+                        <div class="text-secondary">Model</div>
+                        <div>{{ cardData.model }}</div>
                     </div>
-                </ng-container>
-                <ng-container>
                     <div class="flex items-center justify-between py-3">
-                        <div class="text-secondary">Status</div>
-                        <div>{{ cardData.status }}</div>
+                        <div class="text-secondary">PC Type</div>
+                        <div>{{ cardData.pc_type }}</div>
                     </div>
-                </ng-container>
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary">RAM</div>
+                        <div>{{ cardData.ram }}</div>
+                    </div>
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary">Storage Capacity</div>
+                        <div>{{ cardData.storage_capacity }}</div>
+                    </div>
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary">Storage Type</div>
+                        <div>{{ cardData.storage_type }}</div>
+                    </div>
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary">OS</div>
+                        <div>{{ cardData.operating_system }}</div>
+                    </div>
+                    <div class="flex items-center justify-between py-3">
+                        <div class="text-secondary">Graphics</div>
+                        <div>{{ cardData.graphics }}</div>
+                    </div>
+                    <ng-container>
+                        <div class="flex items-center justify-between py-3">
+                            <div class="text-secondary">Size</div>
+                            <div>{{ cardData.size }}</div>
+                        </div>
+                    </ng-container>
+                    <ng-container>
+                        <div class="flex items-center justify-between py-3">
+                            <div class="text-secondary">Color</div>
+                            <div>{{ cardData.color }}</div>
+                        </div>
+                    </ng-container>
+                    <ng-container>
+                        <div class="flex items-center justify-between py-3">
+                            <div class="text-secondary">Serial Number</div>
+                            <div>{{ cardData.serial_no }}</div>
+                        </div>
+                    </ng-container>
+                    <ng-container>
+                        <div class="flex items-center justify-between py-3">
+                            <div class="text-secondary">Status</div>
+                            <!-- <div>{{ cardData.status }}</div> -->
+                            <span class="inline-flex items-center rounded-md bg-green-50 px-5 py-1.5 font-medium text-green-700 ring-1 ring-inset ring-green-600/20">{{ cardData.status }}</span>
+                        </div>
+                    </ng-container>
+                </div>
             </div>
+            
             <ng-container>
                 <div class="flex items-center justify-between py-3">
                     <div class="text-secondary">Currently Assigned To</div>
@@ -141,15 +139,7 @@
             </div>
 
             <!-- Actions -->
-            <div class="grid grid-cols-2 gap-4 w-full mt-8">
-                <button
-                    class="flex-auto"
-                    mat-flat-button
-                    [color]="'primary'"
-                    (click)="viewDetails()"
-                >
-                    View
-                </button>
+            <div class="grid grid-cols-2 gap-4 w-full mt-8">                
                 <button class="flex-auto" mat-stroked-button>Edit</button>
             </div>
         </div>
