refactored routes and folders abd added modals for creating new peripherals and pcs

--- a/src/app/modules/admin/assets/details/peripherals/peripherals-details/peripherals-details.component.html
+++ b/src/app/modules/admin/assets/details/peripherals/peripherals-details/peripherals-details.component.html
@@ -55,16 +55,10 @@
                 </div>
             </div>
             <div class="flex flex-flex items-center mt-6 sm:mt-0 sm:ml-4">
-                <!-- <mat-form-field class="fuse-mat-no-subscript w-full sm:w-72 mt-4 sm:mt-0 sm:ml-4">
-                <mat-icon
-                matPrefix
-                class="icon-size-5"
-                [svgIcon]="'heroicons_solid:search'"></mat-icon>
-                <input
-                    matInput
-                    [placeholder]="'Search Inventory Tag'"
-                />            
-            </mat-form-field> -->
+                <button class="ml-4" mat-stroked-button (click)="openDialog()">
+                    <mat-icon [svgIcon]="'feather:plus'"></mat-icon>
+                    <span class="ml-2 mr-1">Add Peripheral</span>
+                </button>
                 <mat-form-field
                     class="fuse-mat-no-subscript w-full sm:w-72 mt-4 sm:mt-0 sm:ml-4"
                 >
