--- a/src/app/modules/admin/assets/details/pc/pc-details/pc-details.component.html
+++ b/src/app/modules/admin/assets/details/pc/pc-details/pc-details.component.html
@@ -53,6 +53,10 @@
                 </div>
             </div>
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                <button class="ml-4" mat-stroked-button (click)="openDialog()">
+                    <mat-icon [svgIcon]="'feather:plus'"></mat-icon>
+                    <span class="ml-2 mr-1">Add Pc</span>
+                </button>
                 <mat-form-field
                     class="fuse-mat-no-subscript w-full sm:w-72 mt-4 sm:mt-0 sm:ml-4"
                 >
@@ -172,151 +176,7 @@
                         >
                             {{ element.model }}
                         </td>
-                    </ng-container>
-
-                    <!-- <ng-container matColumnDef="processor">
-                        <th
-                            mat-header-cell
-                            *matHeaderCellDef
-                            mat-sort-header
-                            class="px-4 py-2 text-left text-gray-600 font-semibold"
-                        >
-                            Processor
-                        </th>
-                        <td
-                            mat-cell
-                            *matCellDef="let element"
-                            class="border-b border-gray-200 text-sm px-4 py-2"
-                        >
-                            {{ element.processor }}
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="ram">
-                        <th
-                            mat-header-cell
-                            *matHeaderCellDef
-                            mat-sort-header
-                            class="px-4 py-2 text-left text-gray-600 font-semibold"
-                        >
-                            Ram
-                        </th>
-                        <td
-                            mat-cell
-                            *matCellDef="let element"
-                            class="border-b border-gray-200 text-sm px-4 py-2"
-                        >
-                            {{ element.ram }}
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="storage_capacity">
-                        <th
-                            mat-header-cell
-                            *matHeaderCellDef
-                            mat-sort-header
-                            class="px-4 py-2 text-left text-gray-600 font-semibold"
-                        >
-                            Storage Capacity
-                        </th>
-                        <td
-                            mat-cell
-                            *matCellDef="let element"
-                            class="border-b border-gray-200 text-sm px-4 py-2"
-                        >
-                            {{ element.storage_capacity }}
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="storage_type">
-                        <th
-                            mat-header-cell
-                            *matHeaderCellDef
-                            mat-sort-header
-                            class="px-4 py-2 text-left text-gray-600 font-semibold"
-                        >
-                            Storage Type
-                        </th>
-                        <td
-                            mat-cell
-                            *matCellDef="let element"
-                            class="border-b border-gray-200 text-sm px-4 py-2"
-                        >
-                            {{ element.storage_type }}
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="operating_system">
-                        <th
-                            mat-header-cell
-                            *matHeaderCellDef
-                            mat-sort-header
-                            class="px-4 py-2 text-left text-gray-600 font-semibold"
-                        >
-                            Operating System
-                        </th>
-                        <td
-                            mat-cell
-                            *matCellDef="let element"
-                            class="border-b border-gray-200 text-sm px-4 py-2"
-                        >
-                            {{ element.operating_system }}
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="graphics">
-                        <th
-                            mat-header-cell
-                            *matHeaderCellDef
-                            mat-sort-header
-                            class="px-4 py-2 text-left text-gray-600 font-semibold"
-                        >
-                            Graphics
-                        </th>
-                        <td
-                            mat-cell
-                            *matCellDef="let element"
-                            class="border-b border-gray-200 text-sm px-4 py-2"
-                        >
-                            {{ element.graphics }}
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="size">
-                        <th
-                            mat-header-cell
-                            *matHeaderCellDef
-                            mat-sort-header
-                            class="px-4 py-2 text-left text-gray-600 font-semibold"
-                        >
-                            Size
-                        </th>
-                        <td
-                            mat-cell
-                            *matCellDef="let element"
-                            class="border-b border-gray-200 text-sm px-4 py-2"
-                        >
-                            {{ element.size }}
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="color">
-                        <th
-                            mat-header-cell
-                            *matHeaderCellDef
-                            mat-sort-header
-                            class="px-4 py-2 text-left text-gray-600 font-semibold"
-                        >
-                            Color
-                        </th>
-                        <td
-                            mat-cell
-                            *matCellDef="let element"
-                            class="border-b border-gray-200 text-sm px-4 py-2"
-                        >
-                            {{ element.color }}
-                        </td>
-                    </ng-container> -->
+                    </ng-container>                   
 
                     <ng-container matColumnDef="li_description">
                         <th
