--- a/src/app/layout/layouts/vertical/classy/classy.component.html
+++ b/src/app/layout/layouts/vertical/classy/classy.component.html
@@ -1,3 +1,4 @@
+
 <!-- Navigation -->
 <fuse-vertical-navigation
     class="dark bg-gray-900 print:hidden"
@@ -80,21 +81,28 @@
             <shortcuts></shortcuts>          
         </div>
     </div>
-
+    
     <!-- Content -->
     <div class="flex flex-col flex-auto" >        
-        <router-outlet *ngIf="true"></router-outlet>
+
+        <router-outlet *ngIf="true">
+           
+        </router-outlet>
+        <app-alerts-component></app-alerts-component>
     </div>
 
+    
     <!-- Footer -->
-    <div
+    <!-- <div
         class="relative flex flex-0 items-center justify-start w-full h-14 px-4 md:px-6 z-49 border-t bg-card dark:bg-transparent print:hidden"
     >
         <span class="font-medium text-secondary"
             >Anas breeders farms inc. | IT - Assets &copy;
             {{ currentYear }}</span
         >
-    </div>
+    </div> -->
+    
+  
 </div>
 
 <!-- Quick chat -->
