--- a/src/app/modules/admin/assets/components/modal/modal-universal/modal-universal.component.html
+++ b/src/app/modules/admin/assets/components/modal/modal-universal/modal-universal.component.html
@@ -1,12 +1,17 @@
-<h2 mat-dialog-title>Hi {{data.name}}</h2>
+<!-- modal-universal.component.html -->
+<h2 mat-dialog-title>Are you sure you want to continue?</h2>
 <mat-dialog-content>
-  <p>What's your favorite animal?</p>
-  <mat-form-field>
-    <mat-label>Favorite Animal</mat-label>
-    <input matInput [(ngModel)]="animal" />
-  </mat-form-field>
+    <p class="my-6">This action is irreversible,</p>
 </mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="animal" cdkFocusInitial>Ok</button>
+<mat-dialog-actions class="justify-end">
+    <button mat-button (click)="onNoClick()">Cancel</button>
+    <button
+        mat-flat-button
+        [color]="'primary'"
+        type="button"
+        [mat-dialog-close]="true"
+        cdkFocusInitial
+    >
+        Confirm
+    </button>
 </mat-dialog-actions>
