--- a/src/app/modules/admin/assets/details/peripherals/peripherals-details/peripherals-details.component.html
+++ b/src/app/modules/admin/assets/details/peripherals/peripherals-details/peripherals-details.component.html
@@ -277,7 +277,7 @@
                                 <!-- Button to trigger sidenav -->
                                 <button
                                     mat-menu-item
-                                    (click)="openSidePanelWithId(element.id)"                                    
+                                    (click)="openSidePanelWithId(element.id)"
                                 >
                                     <mat-icon
                                         class="icon-size-4 mr-4"
@@ -286,20 +286,31 @@
                                     <span>View</span>
                                 </button>
 
-                                <button mat-menu-item disabled>
+                                <button
+                                    mat-menu-item
+                                    (click)="openEditSidePanel(element)"
+                                >
                                     <mat-icon
                                         class="icon-size-4 mr-4"
                                         svgIcon="feather:edit"
                                     ></mat-icon>
                                     <span>Edit</span>
                                 </button>
-                                <button mat-menu-item>
-                                    <mat-icon
-                                        class="icon-size-4 mr-4"
-                                        svgIcon="feather:delete"
-                                    ></mat-icon>
-                                    <span>Delete</span>
-                                </button>
+
+                                <button
+                                mat-menu-item
+                                (click)="deletePeripheral(element.id)"
+                                aria-label="Delete Peripheral"
+                                role="menuitem"
+                            >
+                                <mat-icon
+                                    class="icon-size-4 mr-4"
+                                    [svgIcon]="'feather:delete'"
+                                ></mat-icon>
+                                <span>Delete</span>
+                            </button>
+                            
+                            
                             </mat-menu>
                         </td>
                     </ng-container>
@@ -322,4 +333,5 @@
             </div>
         </div>
     </div>
+    <!-- <app-alerts-component></app-alerts-component> -->
 </app-side-panel-peripherals>
